correção de texto

--- a/diario.html
+++ b/diario.html
@@ -14,7 +14,7 @@
 			<br>
 	<body bgcolor="black">
 	 		<center>
-	 		<a href="MinhaHistoria.html">Minha Historia</a>
+	 		<a href="MinhaHistoria.html">Minha História</a>
 	 		<br>
 	 		<a href="DadosPessoais.html">Dados Pessoais</a>
 	 		<br>
